# rauc

./: .codecov.yaml  .gitignore  .lgtm.yml  .mailmap  .qemu-test-sshd-config  .readthedocs.yaml  .travis.yml  .uncrustify.cfg  AUTHORS  CHANGES  Makefile.am  README.md  README.rst  SECURITY.md  autogen.sh  build-uncrustify.sh  configure.ac  index.html  meson.build  meson_options.txt  params.json  qemu-ssh  qemu-test  qemu-test-init  qemu-test-rauc-config  qemu-test-stop  rauc.1  scan-build  scan-build-wrapper.sh  tap-t  tap-test  uml-test  uml-test-init  uncrustify.sh  version-gen  version.h.in
.github/: SUPPORT.rst  dependabot.yml  pull_request_template.md
build-aux/: git-version-gen
contrib/: get-cms.py  grub.conf  grubalt.conf  polling-server.py  uboot.sh
contrib/cgi/: .gitignore  Makefile.am  README.rst  autogen.sh  configure.ac
contrib/cgi/build-aux/: git-version-gen
contrib/cgi/m4/: .gitignore  ax_append_compile_flags.m4  ax_append_flag.m4  ax_append_link_flags.m4  ax_check_enable_debug.m4  ax_compiler_flags.m4  ax_compiler_flags_cflags.m4  ax_compiler_flags_gir.m4  ax_compiler_flags_ldflags.m4  ax_is_release.m4  ax_require_defined.m4
contrib/cgi/src/: cgi.c  de.pengutronix.rauc.Installer.xml  rauc-installer.xml
data/: de.pengutronix.rauc.conf  de.pengutronix.rauc.service  de.pengutronix.rauc.service.in  meson.build  rauc-service.sh.in  rauc.catalog  rauc.service  rauc.service.in
docs/: advanced.rst  basic.rst  changes.rst  checklist.rst  conf.py  contributing.rst  design.rst  examples.rst  faq.rst  index.rst  integration.rst  man.rst  meson.build  overview.rst  reference.rst  release-checklist.txt  requirements.in  requirements.txt  scenarios.rst  terminology.rst  update-requirements.sh  updating.rst  using.rst
docs/concept/: update-concept.rst
fuzz/: bundle.c  bundle_fuzzer.corpus  fuzz.h  localfuzzer.c  manifest.c  manifest.dict  manifest_fuzzer.corpus  meson.build
include/: artifacts.h  artifacts_composefs.h  bootchooser.h  bundle.h  checksum.h  config_file.h  context.h  crypt.h  dm.h  emmc.h  event_log.h  gpt.h  hash_index.h  install.h  manifest.h  mark.h  mbr.h  mount.h  nbd.h  network.h  poll.h  polling.h  service.h  shell.h  signature.h  slot.h  stats.h  status_file.h  update_handler.h  update_utils.h  utils.h  verity_hash.h
m4/: ax_code_coverage.m4  ax_compiler_flags_gir.m4  ax_compiler_flags_ldflags.m4
src/: artifacts.c  artifacts_composefs.c  bootchooser.c  bundle.c  checksum.c  config_file.c  context.c  crypt.c  de.pengutronix.rauc.Installer.xml  de.pengutronix.rauc.Poller.xml  dm.c  emmc.c  event_log.c  gpt.c  hash_index.c  install.c  main.c  manifest.c  mark.c  mbr.c  mount.c  nbd.c  network.c  poll.c  polling.c  rauc-installer.xml  service.c  shell.c  signature.c  slot.c  stats.c  status_file.c  update_handler.c  update_utils.c  utils.c  verity_hash.c
src/bootloaders/: barebox.c  (+15 more)
subprojects/: composefs.wrap  glib.wrap
test/: .ruff.toml  Dockerfile  abc-test.conf  adaptive-test.conf  artifacts.c  asan.supp  boot_raw_fallback.c  boot_switch.c  bootchooser.c  broken-manifest.raucm  bundle.c  checksum.c  common.c  common.h  config_file.c  conftest.py  context.c  crypt-test.conf  custom-state-current  decode_cms.py  dm.c  dummy.encrypted  dummy.unencrypted  dummy.verity  dummy.verity.info  event-log.c  event_log.c  fakerand.c  gen_payload_tar.py  get-coverity.sh  good-adaptive-meta-bundle.raucb  good-bundle.raucb  good-casync-bundle-1.4.raucb  good-casync-bundle-1.5.1.raucb  good-casync-bundle-verity.raucb  good-crypt-bundle-encrypted.raucb  good-crypt-bundle-unencrypted.raucb  good-verity-bundle.raucb  hash_index.c  helper.py  (+62 more)
test/install-content/: custom_handler.sh  hook.sh  manifest.raucm  manifest.raucm.crypt  payload-common.tar  payload-special.tar  postinstall.sh  preinstall.sh  space-dummy
test/openssl-ca/: .gitignore  dev-ca.pem  dev-only-ca.pem  manifest  manifest-a1.sig  manifest-a2.sig  manifest-cs1.sig  manifest-ep1.sig  manifest-r1.sig  manifest-ts1.sig  manifest.mail  openssl.cnf  provisioning-ca.pem  rel-ca.pem  rel-partial-ca.pem  root-ca.pem  web-ca.pem
test/openssl-ca/dev/: autobuilder-1.cert.pem  autobuilder-2.cert.pem  ca.cert.pem  crl.pem  index.txt  xku-codeSigning.cert.pem  xku-emailProtection.cert.pem
test/openssl-ca/dev/private/: autobuilder-1.pem  autobuilder-2.pem  ca.key.pem  xku-codeSigning.pem  xku-emailProtection.pem
test/openssl-ca/dir/: b.cert.pem  index.txt
test/openssl-ca/dir/hash/ab/: 0c65607a.0
test/openssl-ca/dir/private/: a.key.pem  b.key.pem
test/openssl-ca/rel/: crl.pem  index.txt  release-1.cert.pem  release-2018.cert.pem
test/openssl-ca/rel/private/: ca.key.pem  release-1-encrypted.pem  release-1.pem  release-2018.pem
test/openssl-ca/root/: ca.cert.pem  crl.pem  index.txt  xku-timeStamping.cert.pem
test/openssl-ca/root/private/: ca.key.pem  xku-emailProtection.pem  xku-timeStamping.pem
test/openssl-ca/web/: ca.cert.pem  client-1.cert.pem  crl.pem  index.txt  server.cert.pem  server.chain.pem
test/openssl-ca/web/private/: ca.key.pem  client-1.pem  server.pem
test/openssl-enc/keys/ecc/: cert-000.pem  cert-001.pem  cert-002.pem  cert-003.pem  cert-004.pem  cert-005.pem  cert-006.pem  cert-007.pem  cert-008.pem  cert-009.pem  certs.pem  private-key-000.pem  private-key-001.pem  private-key-002.pem  private-key-003.pem  private-key-004.pem  private-key-005.pem  private-key-006.pem  private-key-007.pem  private-key-008.pem  private-key-009.pem  public-key-000.pem  public-key-001.pem  public-key-002.pem  public-key-003.pem  public-key-004.pem  public-key-005.pem  public-key-006.pem  public-key-007.pem  public-key-008.pem  public-key-009.pem
test/openssl-enc/keys/rsa-4096/: cert-000.pem  cert-001.pem  cert-002.pem  cert-003.pem  cert-004.pem  cert-005.pem  cert-006.pem  cert-007.pem  cert-008.pem  cert-009.pem  certs.pem  private-key-000.pem  private-key-001.pem  private-key-002.pem  private-key-003.pem  private-key-004.pem  private-key-005.pem  private-key-006.pem  private-key-007.pem  private-key-008.pem  private-key-009.pem
test/services/: de.pengutronix.rauc.service.in
(+17 files in other folders)
